remove completed todos

--- a/gpt2-openwebtext-dro.ipynb
+++ b/gpt2-openwebtext-dro.ipynb
@@ -8,10 +8,7 @@
    "source": [
     "# Train GPT-2 on OpenWebText w/ Distributionally Robust Optimization\n",
     "\n",
-    "## TODO\n",
-    "\n",
-    "- instrument with wandb\n",
-    "- move to python file and [use the new accelerator config via `accelerate launch train.py`](https://huggingface.co/docs/transformers/accelerate)"
+    "See python file of the same name as this notebook for the production version."
    ]
   },
   {
